examples/python/failing/bracketed_imports_issue_320/ExpectedCurrently.py
<<<<<<< LEFT
from ..._utils import (
    foo,
    bar,
    async_foo,
)
||||||| BASE
from ..._utils import (
    foo,
    async_foo,
)
=======
from ..._utils import foo, async_foo
>>>>>>> RIGHT
